Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-45892

[Upgrade][XDCR][UI] Errors thrown while upgrading source cluster from 6.6.2 to 7.0.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 7.0.0
    • Cheshire-Cat
    • UI, XDCR
    • Untriaged
    • 1
    • Unknown

    Description

      Build : 7.0.0-5016

      Steps :
      1. Setup 2x2 clusters running 6.6.2 with kv+n1ql+index+fts on both the nodes and install all 3 sample buckets - add a default bucket as well and pump in data
      2. Setup replications between all the buckets
      3. Upgrade target cluster to 7.0 (pump in data while cluster is in mixed mode)
      4. Ensure data is all caught up
      5. Start upgrading src cluster - pause in mixed mode

      Check replications - errors observed in UI - attaching screenshots

      Logs:
      https://s3.amazonaws.com/bugdb/jira/upgradetesting/collectinfo-2021-04-23T215242-ns_1%40172.23.107.126.zip
      https://s3.amazonaws.com/bugdb/jira/upgradetesting/collectinfo-2021-04-23T215242-ns_1%40172.23.107.142.zip

      Attachments

        Issue Links

          Activity

            People

              pavithra.mahamani Pavithra Mahamani (Inactive)
              arunkumar Arunkumar Senthilnathan (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty